--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-	"name": "react-hooks-mock-code-challenge-gregslist-vite",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"start": "vite --open",
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"devDependencies": {
-		"@types/react": "^18.0.24",
-		"@types/react-dom": "^18.0.8",
-		"@vitejs/plugin-react": "^2.2.0",
-		"vite": "^3.2.3"
-	}
+    "name": "react-hooks-mock-code-challenge-gregslist-vite",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "server": "json-server --watch db.json -p 6001",
+        "start": "vite --open"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.24",
+        "@types/react-dom": "^18.0.8",
+        "@vitejs/plugin-react": "^2.2.0",
+        "vite": "^3.2.3"
+    }
 }
